--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Startsida - Projekt</title>
         <link href="styles/main.scss" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
         <script src="scripts/main.js" type="module"></script>
+        <style>
+            /* Move over to SCSS */
+            #map {
+                width: 100vw;
+                height: 100vh;
+            }
+        </style>
     </head>
     <body>
         <header>
             <h1></h1>
         </header>
         <main>
+            <div id="map"></div>
         </main>
         <footer>
             © 2025 William Pettersson
         </footer>
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     </body>
 </html>
