--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
             <h1></h1>
         </header>
         <main>
+            <div id="notification" class="hidden"></div>
             <div id="map"></div>
         </main>
         <footer>
