Add earth image to HTML

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,11 @@
             <h1></h1>
         </header>
         <main>
+            <div id="data-container" class="hidden">
+                <div id="map"></div>
+                <img id="earth" src="#" alt="" height="240px" width="240px">
+            </div>
             <div id="notification" class="hidden"></div>
-            <div id="map"></div>
         </main>
         <footer>
             © 2025 William Pettersson
