--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,27 @@
         <link href="styles/main.scss" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
         <script src="scripts/main.js" type="module"></script>
-        <style>
-            /* Move over to SCSS */
-            #map {
-                width: 100vw;
-                height: 100vh;
-            }
-        </style>
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>Titel</h1>
         </header>
         <main>
             <div id="data-container" class="hidden">
-                <div id="map"></div>
-                <img id="earth" src="#" alt="" height="240px" width="240px">
+                <div id="grid-info">
+                    <section>
+                        <h2>header 2</h2>
+                        <p>
+                            text
+                        </p>
+                    </section>
+                </div>
+                <div id="grid-map">
+                    <div id="map"></div>
+                </div>
+                <div id="grid-earth">
+                    <img id="earth" src="#" alt="">
+                </div>
             </div>
             <div id="notification" class="hidden"></div>
         </main>
