--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,16 @@
     </head>
     <body>
         <header>
-            <h1>Titel</h1>
+            <h1>Where Is The ISS?</h1>
         </header>
         <main>
             <div id="data-container" class="hidden">
                 <div id="grid-info">
                     <section>
-                        <h2>header 2</h2>
-                        <p>
-                            text
-                        </p>
+                        <h2 id="pos-header"></h2>
+                        <p id="pos-text"></p>
+                        <h2 id="iss-header"></h2>
+                        <p id="iss-text"></p>
                     </section>
                 </div>
                 <div id="grid-map">
