Add light/dark theme + adjust layout

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
                     <div id="map"></div>
                 </div>
                 <div id="grid-earth">
-                    <img id="earth" src="#" alt="">
+                    <div>
+                        <p>Approximate view from the ISS:</p>
+                        <img id="earth" src="#" alt="">
+                    </div>
                 </div>
             </div>
             <div id="notification" class="hidden"></div>
